syntax = "proto3";

import "bank/bank.proto";
import "payment/payment_method.proto";
import "payment/payment.proto";
import "external/tenant.proto";

package main;

service AppService {
  rpc FindOne (HeroById) returns (Hero) {}
}

message HeroById {
  int32 id = 1;
}

message Hero {
  int32 id = 1;
  string name = 2;
}